--- a/apiserver_dev/src/main/resources/application.yml
+++ b/apiserver_dev/src/main/resources/application.yml
@@ -4,3 +4,11 @@ spring:
     url: jdbc:mysql://localhost:3306/apitest?characterEncoding=utf-8&serverTimezone=Asia/Seoul&rewriteBatchedStatements=true
     username: flygil
     password: flygil1234
+    hikari:
+      maximum-pool-size: 10
+      connection-timeout: 5000
+      connection-init-sql: SELECT 1
+      validation-timeout: 2000
+      minimum-idle: 10
+      idle-timeout: 600000
+      max-lifetime: 1800000
