--- a/apiserver_dev/src/main/resources/application.yml
+++ b/apiserver_dev/src/main/resources/application.yml
@@ -12,3 +12,13 @@ spring:
       minimum-idle: 10
       idle-timeout: 600000
       max-lifetime: 1800000
+ 
+mybatis:
+  configuration:
+    multiple-result-sets-enabled: false
+    map-underscore-to-camel-case: true
+    call-setters-on-nulls: true    
+    jdbc-type-for-null: varchar
+    default-fetch-size: 500
+  mapper-locations:
+  - classpath:mybatis/mapper/*.xml
